# discord-to-github-issues-bot

./: .env.example  .gitignore  Dockerfile  PROJECT.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/: bot.py
src/db/: database.py
tests/: test_bot.py
